5317.	[func]		A new asynchronous network communications system
			based on libuv is now used for listening for
			incoming requests and responding to them. (The
			old isc_socket API remains in use for sending
			iterative queries and processing responses; this
			will be changed too in a later release.)

			This change will make it easier to improve
			performance and implement new protocol layers
			(e.g., DNS over TLS) in the future. [GL #29]

5316.	[func]		A new "dnssec-policy" option has been added to
			named.conf to implement a key and signing policy
			(KASP) for zones. When this option is in use,
			named can generate new keys as needed and
			automatically roll both ZSK and KSK keys. (Note
			that the syntax for this statement differs from
			the dnssec policy used by dnssec-keymgr.)

			See the ARM for configuration details. [GL #1134]

5315.	[bug]		Apply the inital RRSIG expiration spread fixed
			to all dynamically created records in the zone
			including NSEC3. Also fix the signature clusters
			when the server has been offline for prolonged
			period of times. [GL #1256]

5314.	[func]		Added a new statistics variable "tcp-highwater"
			that reports the maximum number of simultaneous TCP
			clients BIND has handled while running. [GL #1206]

5313.	[bug]		The default GeoIP2 database location did not match
			the ARM.  'named -V' now reports the default
			location. [GL #1301]

5312.	[bug]		Do not flush the cache for `rndc validation status`.
			Thanks to Tony Finch. [GL !2462]

5311.	[cleanup]	Include all views in output of `rndc validation status`.
			Thanks to Tony Finch. [GL !2461]

5310.	[bug]		TCP failures were affecting EDNS statistics. [GL #1059]

5309.	[placeholder]

5308.	[bug]		Don't log DNS_R_UNCHANGED from sync_secure_journal()
			at ERROR level in receive_secure_serial(). [GL #1288]

5307.	[bug]		Fix hang when named-compilezone output is sent to pipe.
			Thanks to Tony Finch. [GL !2481]

5306.	[placeholder]
